ajout du canvas pour le pendu et finalisation du jeu

--- a/projet.html
+++ b/projet.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Jeu de Pendu</h1>
+        <canvas id="hangman" width="200" height="200"></canvas>
         <div id="word"></div>
         <div id="keyboard"></div>
         <div class="info">
